tests/errors/list_syntax.php
<?php

declare(strict_types=1);

list($sample) = ['hello'];
